test/core/errors/choice_types_error/zs/unreachable_default_multicase_error.zs
package unreachable_default_multicase_error;

choice UnreachableDefaultMulticaseChoice(bool selector) on selector
{
    case true:
    case false:
        bool boolValue;

    default:
        ;
};
